--- a/data/gnome-video-arcade.glade
+++ b/data/gnome-video-arcade.glade
@@ -24,7 +24,7 @@
               </widget>
             </child>
             <child>
-              <widget class="GtkProgressBar" id="main-progressbar">
+              <widget class="GtkProgressBar" id="main-progress-bar">
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="text" translatable="yes"></property>
               </widget>
